# microelectronics

./: .editorconfig  .gitignore  .mxproject  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  microelectronics.code-workspace  microelectronics.ioc  platformio.ini
applications/: CMakeLists.txt
applications/command_compiler/: main.cpp
applications/material_editor/: main.cpp
applications/printer_emulator/: Window.h  main.cpp  plot_area.cpp  plot_area.h  printer_interface.h
applications/ui_compiler/: main.cpp
device_mock/: CMakeLists.txt
device_mock/include/: device_mock.h  display.h  display_mock.h  main.h  sdcard.h  sdcard_mock.h  stm32f7xx_hal_spi.h
device_mock/src/: device_mock.cpp  display_mock.cpp  main.cpp  sdcard_mock.cpp
drivers/: CMakeLists.txt
drivers/include/: acoustic_sensor.h  button.h  display.h  equalizer.h  led.h  motor.h  pulse_engine.h  pwm.h  sdcard.h  spibus.h  termal_regulator.h  touch.h
drivers/sources/: acoustic_sensor.c  button.c  display.c  equalizer.c  led.c  motor.c  pulse_engine.c  pwm.c  sdcard.c  spibus.c  termal_regulator.c  touch.c
emulator/applications/command_compiler/: main.cpp
emulator/applications/material_editor/: main.cpp
emulator/applications/printer_emulator/: Window.cpp  main.cpp  plot_area.cpp  plot_area.h  printer_interface.cpp  printer_interface.h
emulator/tests/: CMakeLists.txt  tests.cpp
emulator/tests/device/: sdcard.cpp
emulator/tests/device_mock/: CMakeLists.txt
emulator/tests/device_mock/include/: main.h  sdcard.h  sdcard_mock.h
emulator/tests/device_mock/src/: device_mock.cpp  main.cpp  sdcard_mock.cpp  stm32f7xx_hal_spi.cpp
emulator/tests/drivers/: equalizer.cpp  led.cpp  motor.cpp  pulse_engine.cpp
emulator/tests/libraries/: gcode.cpp  user_interface.cpp
emulator/tests/resources/: model.gcode  wanhao.gcode
emulator/tests/solutions/: configuration_commands.cpp  gcode_driver.cpp  gcode_driver_acceleration.cpp  printer.cpp  printer_emulator.cpp  printer_emulator.h  printer_file_manager.cpp  printer_memory_manager.cpp
inc/: main.h  stm32f4xx_it.h
lib/drivers/include/: display.h  led.h  memory.h  sdcard.h  spibus.h  termal_regulator.h
lib/drivers/misc/: font8x8.h
lib/drivers/sources/: button.c  display.c  equalizer.c  led.c  memory.c  motor.c  pulse_engine.c  sdcard.c  spibus.c  termal_regulator.c  touch.c
lib/fatfs/: CMakeLists.txt
lib/fatfs/include/: diskio.h  ffconf.h
lib/fatfs/sources/: diskio.c  ffsystem.c
lib/libraries/: CMakeLists.txt
lib/libraries/include/: gcode.h  user_interface.h
lib/libraries/misc/: interface_items.h
lib/libraries/sources/: gcode.c  user_interface.c
lib/printer/: CMakeLists.txt  printer.c  printer.h  printer_constants.h  printer_entities.h  printer_file_manager.c  printer_file_manager.h  printer_gcode_driver.c  printer_gcode_driver.h  printer_math.c  printer_math.h  printer_memory_manager.c  printer_memory_manager.h
lib/solutions/experimental/: experimental.h
libraries/: CMakeLists.txt
libraries/include/: gcode.h  user_interface.h
libraries/misc/: interface_items.h
libraries/sources/: gcode.c  user_interface.c
solutions/: CMakeLists.txt
solutions/experimental/: experimental.c  experimental.h  termal_sensor.c  termal_sensor.h
solutions/printer/: printer.c  printer.h  printer_constants.h  printer_entities.h  printer_file_manager.c  printer_file_manager.h  printer_gcode_driver.c  printer_gcode_driver.h  printer_memory_manager.c  printer_memory_manager.h
src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
test/: CMakeLists.txt
test/device/: device.cpp  file_system.cpp  sdcard.cpp
test/drivers/: equalizer.cpp  led.cpp  motor.cpp  pmw.cpp  pulse_engine.cpp  spibus.cpp  termal_regulator.cpp
test/libraries/: gcode.cpp  user_interface.cpp
test/resources/: model.gcode  pla.mtl
test/solutions/: configuration_commands.cpp  gcode_driver.cpp  gcode_driver_acceleration.cpp  printer.cpp  printer_emulator.cpp  printer_emulator.h  printer_file_manager.cpp  printer_memory_manager.cpp
